@@ -23,6 +23,7 @@ import org.json.JSONObject;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Objects;
 
@@ -42,7 +43,7 @@ public class RemoteExecutor {
     	URL url;
     	HttpURLConnection urlConnection = null;
     	try {
-    		url = new URL(urlString);
+    		url = new URI(urlString).toURL();
     		urlConnection = (HttpsURLConnection) url.openConnection();
 
     		int status = urlConnection.getResponseCode();
@@ -75,7 +76,7 @@ public class RemoteExecutor {
 	public String executeGet(String urlString) throws Exception {
 		HttpsURLConnection urlConnection = null;
 		try {
-			URL url = new URL(urlString);
+			URL url = new URI(urlString).toURL();
 			urlConnection = (HttpsURLConnection) url.openConnection();
 
 			int status = urlConnection.getResponseCode();
@@ -86,6 +87,7 @@ public class RemoteExecutor {
 				while ((line = reader.readLine()) != null) {
 					try {
 						result.append(line.trim());
+						result.append("\n");  // Preserve newlines for proper markdown formatting
 					} catch (Exception e){
 						e.printStackTrace();
 						break;
@@ -109,7 +111,7 @@ public class RemoteExecutor {
 		URL url;
 		HttpURLConnection urlConnection = null;
 		try {
-			url = new URL(urlString);
+			url = new URI(urlString).toURL();
 			urlConnection = (HttpsURLConnection) url.openConnection();
 
 			int status = urlConnection.getResponseCode();
